fix storage image from cloudinary

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.servlet.multipart.max-request-size=215MB
 JWT_SECRET=eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJrdW5sZXpJc21lIn0.HbjEB_qSPWppMr-mn1ObynLdU7ofHgDONFa6OP2TyKk
 
 spring.jackson.serialization.fail-on-empty-beans=false
+
+#=== cloudinary ===
+cloudinary.cloud_name=de4w4jvaq
+cloudinary.api_key=585872716551962
+cloudinary.api_secret=QjDR72hkhoEusREgk-Wxnw2LZ0E
