--- a/pom.xml
+++ b/pom.xml
@@ -83,10 +83,11 @@
         </dependency>
 
         <dependency>
-            <groupId>com.google.apis</groupId>
-            <artifactId>google-api-services-drive</artifactId>
-            <version>v3-rev136-1.25.0</version>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.25.0</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
